--- a/package.json
+++ b/package.json
@@ -1,19 +1,27 @@
 {
   "name": "bootcamp-frontend",
-  "version": "1.0.0",
-  "description": "Front end for bootcamp port",
-  "main": "index.js",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/mattwongsd/bootcamp-frontend.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/mattwongsd/bootcamp-frontend/issues"
-  },
-  "homepage": "https://github.com/mattwongsd/bootcamp-frontend#readme"
+  "dependencies": {
+    "@apollo/react-hooks": "^3.1.5",
+    "@carbon/grid": "^10.10.2",
+    "@carbon/themes": "^10.12.0",
+    "apollo-boost": "^0.4.9",
+    "carbon-components": "^10.12.0",
+    "carbon-components-react": "^7.12.0",
+    "carbon-icons": "^7.0.7",
+    "graphql": "^15.0.0",
+    "lodash": "^4.17.15",
+    "next": "9.4.2",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "recoil": "0.0.7",
+    "sass": "^1.26.5",
+    "string-replace-loader": "^2.3.0"
+  }
 }
